--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="login_title">WELCOME\nSFC\n\nNOW</string>
     <string name="login_title2">use your biometric to login</string>
     <string name="ball_text">0%</string>
+    <string name="title_activity_note">NoteActivity</string>
 </resources>
