--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SFC</string>
+    <string name="app_name">PGA</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -8,6 +8,8 @@
     <string name="action_settings">Settings</string>
     <string name="sign_up_title">Create\nYOUR\nAccount</string>
     <string name="menu_home">Home</string>
+    <string name="menu_PW">Forgot password</string>
+    <string name="menu_help">Help</string>
     <string name="menu_read_file">Read file</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="name_">Name:</string>
