--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_PW">Forgot password</string>
     <string name="menu_help">Help</string>
-    <string name="menu_read_file">Read file</string>
+    <string name="menu_read_file">Help</string>
     <string name="menu_slideshow">Forgot password</string>
     <string name="name_">Name:</string>
     <string name="gender">Gender:</string>
